--- a/katintos.html
+++ b/katintos.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="https://www.newegg.com/Components/Store/ID-1"><img src="pc.jpg" alt=""></a>
+    <a href="https://www.newegg.com/Components/Store/ID-1"><img src="Dolgok/pc.jpg" alt=""></a>
 </body>
 </html>
